[tool.poetry]
name = "llm_orchestrator"
version = "0.1.0"
description = ""
authors = ["Mohamed ASSOUKTI <mohamed.assoukti@partnre.com>"]
readme = "README.md"
packages = [{include = "llm_orchestrator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
langchain = "^0.0.345"
openai = "^1.3.7"
tiktoken = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
